--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
 	      background:rgb(0,0,0);
   background-image: url('earth3.jpg');
   background-repeat: no-repeat;
-  background-attachment: fixed;  
+/*  background-attachment: fixed;  */
   background-size: contain;
-background-position: center;
+background-position: right;
 color:#FFF8E7;
 font-family: SFMono-Regular,Menlo,Monaco,Consolas,"Liberation Mono","Courier New",monospace;
 }
