--- a/index.html
+++ b/index.html
@@ -121,8 +121,8 @@
             </div>
         </section>
 		
-			
-	<!-- Contact section-->
+<!--			
+	<!-- Contact section
         <section id="contact" class="bg-dark" style="color:white; box-shadow: inset 0 0 5rem rgba(0, 0, 0, .5); padding-top: 3rem !important">
             <div class="container px-4">
                 <div class="row gx-4">
@@ -135,11 +135,11 @@
         </section>
 		
  	
-        <!-- Footer-->
+        <!-- Footer
         <footer class="py-5 bg-dark" style="box-shadow: inset 0 0 5rem rgba(0, 0, 0, .5)">
             <div class="container px-4"><p class="m-0 text-center text-white">Copyright &copy; Your Website 2023</p></div>
         </footer>
-	    
+-->	    
 	    
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
