--- a/index.html
+++ b/index.html
@@ -28,29 +28,32 @@
             color:#FFF8E7;
             font-family: SFMono-Regular,Menlo,Monaco,Consolas,"Liberation Mono","Courier New",monospace;
             }
-    .scroll-to-top {
-    position: fixed;
-    right: 1rem;
-    bottom: 1rem;
-    display: none;
-    width: 2.75rem;
-    height: 2.75rem;
-    text-align: center;
-    color: #fff;
-    background: rgba(90,92,105,.5);
-    line-height: 46px;
-    }                                                    
+		
+        .scroll-to-top {
+        position: fixed;
+        right: 1rem;
+        bottom: 1rem;
+        display: none;
+        width: 2.75rem;
+        height: 2.75rem;
+        text-align: center;
+        color: #fff;
+        background: rgba(90,92,105,.5);
+        line-height: 46px;
+        }                                                    
 	
 	.rounded {
         border-radius: 0.35rem!important;
 	}
+		
 	</style>
+	    
     </head>
 	
     <body id="page-top">
 	    
         <!-- Navigation-->
-        <nav class="navbar navbar-dark bg-dark fixed-top" id="mainNav" style="box-shadow: inset 0 0 5rem rgba(0, 0, 0, .5)">
+        <nav class="navbar navbar-dark bg-dark fixed-top" id="mainNav" style="background-color:#171b1e">
             <div class="container px-4">
                 <a class="navbar-brand" href="#page-top">MoonShoot</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
