--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     <body id="page-top">
 	    
         <!-- Navigation-->
-        <nav class="navbar navbar-dark bg-dark fixed-top" id="mainNav" style="background-color:#171b1e">
+        <nav class="navbar navbar-dark" id="mainNav" style="background-color:#171b1e">
             <div class="container px-4">
                 <a class="navbar-brand" href="#page-top">MoonShoot</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
