--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 	
     <body id="page-top">
 	    
-        <!-- Navigation-->
+<!--        <!-- Navigation
         <nav class="navbar navbar-dark" id="mainNav" style="background-color:#171b1e">
             <div class="container px-4">
                 <a class="navbar-brand" href="#page-top">MoonShoot</a>
@@ -66,7 +66,7 @@
                 </div>
             </div>
         </nav>
-		
+-->		
 		
         <!-- Header-->
         <header class="bg-primary bg-dark text-white" style="box-shadow: inset 0 0 5rem rgba(0, 0, 0, .5); padding-top: 5rem !important">
