--- a/index.html
+++ b/index.html
@@ -74,6 +74,8 @@
                  <div class="page1" style="height: 20rem">
                  <!-- <a class="btn btn-lg btn-light" href="#about">Start scrolling!</a> -->
                  </div>
+		    <br>
+		    <p class="lead">You're here to help a couple of guys get to outer space.</p>
 	    </div>    
         </header>
 			
@@ -83,7 +85,7 @@
             <div class="container px-4">
                 <div class="row gx-4">
                     <div class="col-lg-11">
-                            <p class="lead">You're here to help a couple of guys get to outer space.</p>						
+                            <!-- <p class="lead">You're here to help a couple of guys get to outer space.</p> -->						
                             <!-- <p class="mb-0">We're here to <b><span style="color:#0d6efd">take that ride!</span></b></p> -->
                         </div>
                     </div>
