--- a/index.html
+++ b/index.html
@@ -140,6 +140,7 @@
                         <!-- <p><a class="btn btn-secondary" href="#">View details &raquo;</a></p> -->
                     </div><!-- /.col-lg-4 -->
                 </div><!-- /.row -->
+		    <a class="btn btn-lg btn-light" href="onepage.html">Start scrolling!</a>
             </div>
         </section>
 		
