--- a/onepage.html
+++ b/onepage.html
@@ -84,7 +84,7 @@
       background-repeat: no-repeat;
       background-attachment: fixed;  
       background-size: contain;
-      background-position: center top;
+      background-position: center;
     }
 
     .main section.page2 {
@@ -93,7 +93,7 @@
   background-repeat: no-repeat;
   background-attachment: fixed;  
   background-size: contain;
-background-position: center top;
+  background-position: right;
 
     }
    
