--- a/index.html
+++ b/index.html
@@ -74,8 +74,8 @@
                  <div class="page1" style="height: 20rem">
                  <!-- <a class="btn btn-lg btn-light" href="#about">Start scrolling!</a> -->
                  </div>
-		    <br>
-		    <p class="lead">You're here to help a couple of guys get to outer space.</p>
+		 <br>
+		 <p class="lead">You're here to help a couple of guys get to outer space.</p>
 	    </div>    
         </header>
 			
@@ -87,9 +87,9 @@
                     <div class="col-lg-11">
                             <!-- <p class="lead">You're here to help a couple of guys get to outer space.</p> -->						
                             <!-- <p class="mb-0">We're here to <b><span style="color:#0d6efd">take that ride!</span></b></p> -->
-                        </div>
                     </div>
                 </div>
+            </div>
                 <!-- <div class="container px-4">
                     <div class="row gx-4 justify-content-center">
                         <div class="col-lg-8">
@@ -126,21 +126,20 @@
                         <h2 class="fw-normal">The Man</h2>
                         <p>Some representative placeholder content for the first column.</p>
                         <!-- <p><a class="btn btn-secondary" href="#">View details &raquo;</a></p> -->
-                    </div><!-- /.col-lg-4 -->
+                    </div>
                     <div class="col-lg-4">
                         <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="var(--bs-secondary-color)"/></svg>
                         <h2 class="fw-normal">The Myth</h2>
                         <p>Representative placeholder content for the second column.</p>
                         <!-- <p><a class="btn btn-secondary" href="#">View details &raquo;</a></p> -->
-                    </div><!-- /.col-lg-4 -->
+                    </div>
                     <div class="col-lg-4">
                         <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="var(--bs-secondary-color)"/></svg>
                         <h2 class="fw-normal">The Legend</h2>
                         <p>And lastly this, the third column of representative placeholder content.</p>
                         <!-- <p><a class="btn btn-secondary" href="#">View details &raquo;</a></p> -->
-                    </div><!-- /.col-lg-4 -->
-                </div><!-- /.row -->
-		    <a class="btn btn-lg btn-light" href="onepage.html">Start scrolling!</a>
+                    </div>
+                </div>
             </div>
         </section>
 		
@@ -162,28 +161,25 @@
         <footer class="py-5 bg-dark" style="box-shadow: inset 0 0 5rem rgba(0, 0, 0, .5)">
             <div class="container px-4"><p class="m-0 text-center text-white">Copyright &copy; Your Website 2023</p></div>
         </footer>
--->	    
-	    					    <a class="scroll-to-top rounded" href="#page-top">
-        <i class="fas fa-angle-up"></i>
-    </a>
-        </section>
-<!-- Bootstrap core JS-->
+-->	 
+	<a class="scroll-to-top rounded" href="#page-top"><i class="fas fa-angle-up"></i></a>
+	    
+        <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
         <!-- Core theme JS-->
         <script src="js/scripts.js"></script>
 		
-		<!-- Bootstrap core JavaScript-->
-    <script src="vendor/jquery/jquery.min.js"></script>
+        <!-- Bootstrap core JavaScript-->
+        <script src="vendor/jquery/jquery.min.js"></script>
 
+        <!-- Core plugin JavaScript-->
+        <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
 
-    <!-- Core plugin JavaScript-->
-    <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
+        <!-- Custom scripts for all pages-->
+        <script src="js/sb-admin-2.min.js"></script>
 
-    <!-- Custom scripts for all pages-->
-    <script src="js/sb-admin-2.min.js"></script>
-
-    <!-- Page level plugins -->
-    <script src="vendor/chart.js/Chart.min.js"></script>
+        <!-- Page level plugins -->
+        <script src="vendor/chart.js/Chart.min.js"></script>
 	    
     </body>
 	
