--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                 <div class="row gx-4">
                     <div class="col-lg-8">
                         <h2>The Astronauts</h2>
-                        <p class="lead">Lem dolom et repudiandae ipsa exercitationem, in, quo totam.</p>
+                        <!-- <p class="lead">Lem dolom et repudiandae ipsa exercitationem, in, quo totam.</p> -->
                     </div>
                 </div>
             </div>
@@ -124,19 +124,19 @@
                     <div class="col-lg-4">
                         <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="var(--bs-secondary-color)"/></svg>
                         <h2 class="fw-normal">The Man</h2>
-                        <p>Some representative placeholder content for the first column.</p>
+                        <!-- <p>Some representative placeholder content for the first column.</p> -->
                         <!-- <p><a class="btn btn-secondary" href="#">View details &raquo;</a></p> -->
                     </div>
                     <div class="col-lg-4">
                         <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="var(--bs-secondary-color)"/></svg>
                         <h2 class="fw-normal">The Myth</h2>
-                        <p>Representative placeholder content for the second column.</p>
+                        <!-- <p>Representative placeholder content for the second column.</p> -->
                         <!-- <p><a class="btn btn-secondary" href="#">View details &raquo;</a></p> -->
                     </div>
                     <div class="col-lg-4">
                         <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="var(--bs-secondary-color)"/></svg>
                         <h2 class="fw-normal">The Legend</h2>
-                        <p>And lastly this, the third column of representative placeholder content.</p>
+                        <!-- <p>And lastly this, the third column of representative placeholder content.</p> -->
                         <!-- <p><a class="btn btn-secondary" href="#">View details &raquo;</a></p> -->
                     </div>
                 </div>
