--- a/fullwidth.html
+++ b/fullwidth.html
@@ -218,7 +218,9 @@ font-family: SFMono-Regular,Menlo,Monaco,Consolas,"Liberation Mono","Courier New
                 <div class="row justify-content-center">
                    <div class="col-11">
                         <div class="page1" style="height: 20rem">
-                        </div>                    
+                        </div>   
+			<p class="lead">You're here to help a couple of guys get to outer space.</p>
+                        <!-- <p class="mb-0">We're here to <b><span style="color:#0d6efd">take that ride!</span></b></p> -->
                    </div>
 
               
@@ -243,12 +245,6 @@ font-family: SFMono-Regular,Menlo,Monaco,Consolas,"Liberation Mono","Courier New
                 <div class="container my-5">
                     <div class="row justify-content-center">
                         <div class="col-11">
-                            <p class="lead">You're here to help a couple of guys get to outer space.</p>
-						
-
-
-
-                            <p class="mb-0">We're here to <b><span style="color:#0d6efd">take that ride!</span></b></p>
                         </div>
                     </div>
                 </div>
