--- a/onepage.html
+++ b/onepage.html
@@ -49,7 +49,7 @@
                     <!-- <img src="palm-tree8.png" width="100%" height=""> -->
                 </div>
 		<div style="height:28%">
-		    <h1 style="text-align:center; color:#E2E4E7">You're here to help a couple of guys get to outer space.</h1>
+		    <h1 style="text-align:center; color:#E2E4E7">You are here to help a couple of guys get to outer space.</h1>
 		</div>
             </section>
 
