--- a/onepage.html
+++ b/onepage.html
@@ -34,6 +34,7 @@
        background-color:#212529;
        box-shadow: inset 0 0 5rem rgba(0, 0, 0, .5);
     }
+	  
   </style>
 
 </head>
@@ -46,21 +47,21 @@
         
             <section class="page1">
                 <div class="page_container" style="height:78%; background-image: url('palm-tree8.png'); background-repeat: no-repeat; background-size: contain; background-position: center">
-                    <!-- <img src="palm-tree8.png" width="100%" height=""> -->
                 </div>
 		<div style="height:28%">
-		    <h1 style="text-align:center; color:#E2E4E7">You are here to help a couple of guys get to outer space.</h1>
+		    <h1 style="text-align:center; color:#E2E4E7">You're here to help a couple of guys get to outer space.</h1>
 		</div>
             </section>
 
-               
             <section class="page2">
                 <div class="page_container">
-                    <!-- <h1>Ready-to-use plugin</h1> -->
                 </div>
             </section>
 
             <section class="page3">
+		    <h2 style="text-align: center; color:#FFF8E7; font-family: SFMono-Regular,Menlo,Monaco,Consolas,"Liberation Mono","Courier New",monospace">
+			   The Astronauts
+		    </h2>   
                     <h1>Ready-to-use Page4</h1>
             </section>
 
