--- a/onepage.html
+++ b/onepage.html
@@ -59,10 +59,9 @@
             </section>
 
             <section class="page3">
-		    <h2 style="text-align: center; color:#FFF8E7; font-family: SFMono-Regular,Menlo,Monaco,Consolas,"Liberation Mono","Courier New",monospace">
+		    <h2 style="text-align: center; color:#FFF8E7; font-family: system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", "Noto Sans", "Liberation Sans", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";">
 			   The Astronauts
 		    </h2>   
-                    <h1>Ready-to-use Page4</h1>
             </section>
 
             <!-- <section>
