--- a/onepage.html
+++ b/onepage.html
@@ -59,7 +59,7 @@
             </section>
 
             <section class="page3">
-		    <h2 style="text-align: center; color:#FFF8E7; font-family: system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", "Noto Sans", "Liberation Sans", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";">
+		    <h2 style="text-align: center; color:#FFF8E7">
 			   The Astronauts
 		    </h2>   
             </section>
