--- a/fullwidth.html
+++ b/fullwidth.html
@@ -50,8 +50,6 @@ background-position: center top;
   background-size: contain;
   background-position: center;
   color:#FFF8E7;
-  font-family: SFMono-Regular,Menlo,Monaco,Consolas,"Liberation Mono","Courier New",monospace;
-
     }
    
     .main section.page3 {
@@ -156,14 +154,19 @@ background-position: center top;
         <section class="py-5 bg-dark" style="box-shadow: inset 0 0 5rem rgba(0, 0, 0, .5); padding-top: 0rem !important">
             <div class="container my-5">
                 <div class="row justify-content-center">
-                   <div class="col-11">
+		    <div style="height:78%; background-image: url('palm-tree8.png'); background-repeat: no-repeat; background-size: contain; background-position: center">
+                    </div>
+		    <div style="height:28%">
+		        <h1 style="text-align:center; color:#E2E4E7">You're here to help a couple of guys get to outer space.</h1>
+		    </div>
+                    <!-- <div class="col-11">
                         <div class="page1" style="height: 20rem">
                         </div>   
-			<p class="lead" style="text-align: center; color:#FFF8E7; font-family: SFMono-Regular,Menlo,Monaco,Consolas,"Liberation Mono","Courier New",monospace">
+			<p class="lead" style="text-align: center; color:#FFF8E7">
 			    You're here to help a couple of guys get to outer space.
 			</p>
-                        <!-- <p class="mb-0">We're here to <b><span style="color:#0d6efd">take that ride!</span></b></p> -->
-                   </div>
+                        
+                        </div>
 
               
 <!--                <div class="col-lg-3">
