--- a/fullwidth.html
+++ b/fullwidth.html
@@ -153,8 +153,8 @@ background-position: center top;
         <!-- Content section-->
         <section class="py-5 bg-dark" style="box-shadow: inset 0 0 5rem rgba(0, 0, 0, .5); padding-top: 0rem !important">
             <div class="container my-5">
-                <div class="row justify-content-center">
-		    <div class="col-11">	
+                <!-- <div class="row justify-content-center">
+		    <div class="col-11"> -->	
 		        <div style="height:78%; background-image: url('palm-tree8.png'); background-repeat: no-repeat; background-size: contain; background-position: center">
                         </div>
 		        <div style="height:28%">
@@ -167,7 +167,7 @@ background-position: center top;
 			<p class="lead" style="text-align: center; color:#FFF8E7">
 			    You're here to help a couple of guys get to outer space.
 			</p> -->
-                     </div>   
+                   <!--  </div> -->   
                         
 
               
@@ -181,7 +181,7 @@ background-position: center top;
                         <p class="lead">You're here to help a couple of guys get to outer space.</p>
                         <p class="mb-0">We're here to <b>take that ride!</b></p>
                     </div> -->
-                </div>
+                <!-- </div> -->
             </div>
 
         </section>
