--- a/fullwidth.html
+++ b/fullwidth.html
@@ -152,7 +152,7 @@ background-position: center top;
 
         <!-- Content section-->
         <section class="py-5 bg-dark" style="box-shadow: inset 0 0 5rem rgba(0, 0, 0, .5); padding-top: 0rem !important">
-            <div class="container my-5">
+            <!-- <div class="container my-5"> -->
                 <!-- <div class="row justify-content-center">
 		    <div class="col-11"> -->	
 		        <div style="height:78%; background-image: url('palm-tree8.png'); background-repeat: no-repeat; background-size: contain; background-position: center">
@@ -182,7 +182,7 @@ background-position: center top;
                         <p class="mb-0">We're here to <b>take that ride!</b></p>
                     </div> -->
                 <!-- </div> -->
-            </div>
+            <!-- </div> -->
 
         </section>
 
