--- a/onepage.html
+++ b/onepage.html
@@ -62,6 +62,28 @@
 		    <h2 style="text-align: center; color:#FFF8E7">
 			   The Astronauts
 		    </h2>   
+		     <div class="container px-4 text-center">
+                <div class="row">
+                    <div class="col-lg-4">
+                        <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="var(--bs-secondary-color)"/></svg>
+                        <h2 class="fw-normal">The Man</h2>
+                        <!-- <p>Some representative placeholder content for the first column.</p> -->
+                        <!-- <p><a class="btn btn-secondary" href="#">View details &raquo;</a></p> -->
+                    </div>
+                    <div class="col-lg-4">
+                        <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="var(--bs-secondary-color)"/></svg>
+                        <h2 class="fw-normal">The Myth</h2>
+                        <!-- <p>Representative placeholder content for the second column.</p> -->
+                        <!-- <p><a class="btn btn-secondary" href="#">View details &raquo;</a></p> -->
+                    </div>
+                    <div class="col-lg-4">
+                        <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="var(--bs-secondary-color)"/></svg>
+                        <h2 class="fw-normal">The Legend</h2>
+                        <!-- <p>And lastly this, the third column of representative placeholder content.</p> -->
+                        <!-- <p><a class="btn btn-secondary" href="#">View details &raquo;</a></p> -->
+                    </div>
+                </div>
+            </div>
             </section>
 
             <!-- <section>
