--- a/onepage.html
+++ b/onepage.html
@@ -34,7 +34,24 @@
        background-color:#212529;
        box-shadow: inset 0 0 5rem rgba(0, 0, 0, .5);
     }
+
+    .rounded-circle {
+       border-radius: 50%!important;
+    }
 	  
+    .bd-placeholder-img {
+        font-size: 1.125rem;
+        text-anchor: middle;
+        -webkit-user-select: none;
+        -moz-user-select: none;
+        user-select: none;
+    }
+
+    @media (min-width: 768px) {
+        .bd-placeholder-img-lg {
+          font-size: 3.5rem;
+        }
+    }
   </style>
 
 </head>
@@ -62,7 +79,7 @@
 		    <h2 style="text-align: center; color:#FFF8E7">
 			   The Astronauts
 		    </h2>   
-		     <div class="container px-4 text-center">
+		<div class="container px-4 text-center">
                 <div class="row">
                     <div class="col-lg-4">
                         <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="var(--bs-secondary-color)"/></svg>
@@ -83,7 +100,7 @@
                         <!-- <p><a class="btn btn-secondary" href="#">View details &raquo;</a></p> -->
                     </div>
                 </div>
-            </div>
+                </div>
             </section>
 
             <!-- <section>
