--- a/onepage.html
+++ b/onepage.html
@@ -35,6 +35,9 @@
        box-shadow: inset 0 0 5rem rgba(0, 0, 0, .5);
     }
 
+	  
+	  /* MARKETING CONTENT
+-------------------------------------------------- */
     .rounded-circle {
        border-radius: 50%!important;
     }
@@ -52,6 +55,21 @@
           font-size: 3.5rem;
         }
     }
+	  
+
+
+/* Center align the text within the three columns below the carousel */
+.marketing .col-lg-4 {
+  margin-bottom: 1.5rem;
+  text-align: center;
+}
+/* rtl:begin:ignore */
+.marketing .col-lg-4 p {
+  margin-right: .75rem;
+  margin-left: .75rem;
+}
+/* rtl:end:ignore */
+	  
   </style>
 
 </head>
@@ -72,6 +90,16 @@
 
             <section class="page2">
                 <div class="page_container">
+                </div>
+            </section>
+		
+            <section class="page3">
+	        <div style="width:100%"><h2>The Astronauts</h2> </div>
+				
+		<div style="display: flex; justify-content: center; align-items: center; height:100%">
+		    <div style="height:52%; width: 33%; float: left; background-image: url('palm-tree8.png'); background-repeat: no-repeat; background-size: contain; background-position:center"> </div>
+                    <div style="height:52%; width: 33%; float: left; background-image: url('palm-tree8.png'); background-repeat: no-repeat; background-size: contain; background-position:center"> </div>
+                    <div style="height:52%; width: 33%; float: left; background-image: url('palm-tree8.png'); background-repeat: no-repeat; background-size: contain; background-position:center"> </div>
                 </div>
             </section>
 
