--- a/fullwidth.html
+++ b/fullwidth.html
@@ -211,6 +211,12 @@ background-position: center top;
                     </div>
                 </div>
             </div>
+	    <div style="display: flex; justify-content: center; align-items: center; height:80%">
+		    <div style="height:52%; width: 33%; float: left; background-image: url('palm-tree8.png'); background-repeat: no-repeat; background-size: contain; background-position:center"> </div>
+                    <div style="height:52%; width: 33%; float: left; background-image: url('palm-tree8.png'); background-repeat: no-repeat; background-size: contain; background-position:center"> </div>
+                    <div style="height:52%; width: 33%; float: left; background-image: url('palm-tree8.png'); background-repeat: no-repeat; background-size: contain; background-position:center"> </div>
+            </div>
+            </section>
         </section>
 
 
