--- a/fullwidth.html
+++ b/fullwidth.html
@@ -149,6 +149,27 @@ background-position: center top;
 
         <div class="main">
 
+        <section class="py-5 bg-dark" style="padding-top: 0rem !important; box-shadow: inset 0 0 5rem rgba(0, 0, 0, .5)" >
+            <div class="container my-5">
+                <div class="row justify-content-center">
+                    <div class="col-11">
+                        <h2 style="text-align: center; color:#FFF8E7; font-family: SFMono-Regular,Menlo,Monaco,Consolas,"Liberation Mono","Courier New",monospace">
+			    The Astronauts
+			</h2>
+<!--                        <p style="text-align: center; color:#FFF8E7;"><span class="lead">These guys...of course!</span></p> -->
+                    </div>
+                </div>
+            </div>
+	    <div style="display: flex; justify-content: center; align-items: center; height:80%">
+		    <div style="height:52%; width: 33%; float: left; background-image: url('palm-tree8.png'); background-repeat: no-repeat; background-size: contain; background-position:center"> </div>
+                    <div style="height:52%; width: 33%; float: left; background-image: url('palm-tree8.png'); background-repeat: no-repeat; background-size: contain; background-position:center"> </div>
+                    <div style="height:52%; width: 33%; float: left; background-image: url('palm-tree8.png'); background-repeat: no-repeat; background-size: contain; background-position:center"> </div>
+            </div>
+           
+        </section>
+		
+		
+		
 
         <!-- Content section-->
         <section class="py-5 bg-dark" style="box-shadow: inset 0 0 5rem rgba(0, 0, 0, .5); padding-top: 0rem !important">
@@ -216,7 +237,7 @@ background-position: center top;
                     <div style="height:52%; width: 33%; float: left; background-image: url('palm-tree8.png'); background-repeat: no-repeat; background-size: contain; background-position:center"> </div>
                     <div style="height:52%; width: 33%; float: left; background-image: url('palm-tree8.png'); background-repeat: no-repeat; background-size: contain; background-position:center"> </div>
             </div>
-            </section>
+           
         </section>
 
 
