--- a/fullwidth.html
+++ b/fullwidth.html
@@ -150,13 +150,10 @@ background-position: center top;
         <div class="main">
 
         <section class="py-5 bg-dark" style="padding-top: 0rem !important; box-shadow: inset 0 0 5rem rgba(0, 0, 0, .5)" >
-            <div class="container my-5">
+            <div class="container my-5" style="margin-bottom:0rem !important">
                 <div class="row justify-content-center">
                     <div class="col-11">
-                        <h2 style="text-align: center; color:#FFF8E7; font-family: SFMono-Regular,Menlo,Monaco,Consolas,"Liberation Mono","Courier New",monospace">
-			    The Astronauts
-			</h2>
-<!--                        <p style="text-align: center; color:#FFF8E7;"><span class="lead">These guys...of course!</span></p> -->
+                        <h2 style="text-align: center; color:#FFF8E7"> The Astronauts </h2>
                     </div>
                 </div>
             </div>
