--- a/caro.html
+++ b/caro.html
@@ -113,6 +113,13 @@
       background-size: contain;
       background-position: right;
     }
+	    
+	    .page8 {
+            background-image: url('palm-tree8.png');
+            background-repeat: no-repeat;
+            background-size: contain;
+            background-position: center;
+            }
     </style>
 
     
@@ -202,14 +209,23 @@
   </nav>
 </header>
 -->
-
+        <header class="bg-primary bg-dark text-white" style="box-shadow: inset 0 0 5rem rgba(0, 0, 0, .5); padding-top: 5rem !important">
+            <div class="container px-4 text-center">
+                 <div class="page8" style="height: 20rem">
+                 <!-- <a class="btn btn-lg btn-light" href="#about">Start scrolling!</a> -->
+                 </div>
+		 <br>
+		 <p class="lead">You're here to help a couple of guys get to outer space.</p>
+	    </div>    
+        </header>
+<!--	  
     <div style="width: 100%; box-shadow: inset 0 0 5rem rgba(0, 0, 0, .5)">
         <div style="margin-bottom:1rem; height:20rem; width: 100%; background-image: url('palm-tree8.png'); background-repeat: no-repeat; background-size: contain; background-position:center"> </div>
 
         <p class="lead" style="margin-bottom:3rem; text-align:center">You're here to help a couple of guys get to outer space.</p>
-		
+-->		
         <div style="height:30rem; width: 100%; background-image: url('earth3.jpg'); background-repeat: no-repeat; background-size: contain; background-position:right; background-color:black"> </div>
-    </div>               
+<!--    </div> -->               
 	
 <main style="box-shadow: inset 0 0 5rem rgba(0, 0, 0, .5)">
 
