--- a/caro.html
+++ b/caro.html
@@ -224,9 +224,18 @@
 
         <p class="lead" style="margin-bottom:3rem; text-align:center">You're here to help a couple of guys get to outer space.</p>
 -->		
-        <div style="height:30rem; width: 100%; background-image: url('earth3.jpg'); background-repeat: no-repeat; background-size: contain; background-position:right; background-color:black"> </div>
-<!--    </div> -->               
-	
+<!--        <div style="height:30rem; width: 100%; background-image: url('earth3.jpg'); background-repeat: no-repeat; background-size: contain; background-position:right; background-color:black"> </div>
+    </div> -->               
+	<div class="page2" style="background-color:black; box-shadow: inset 0 0 5rem rgba(0, 0, 0, .5); padding-top: 1rem !important; height: 20rem">
+            <div class="container px-4">
+                <div class="row gx-4">
+                    <div class="col-lg-11">
+                            <!-- <p class="lead">You're here to help a couple of guys get to outer space.</p> -->						
+                            <!-- <p class="mb-0">We're here to <b><span style="color:#0d6efd">take that ride!</span></b></p> -->
+                    </div>
+                </div>
+            </div>
+	</div>		
 <main style="box-shadow: inset 0 0 5rem rgba(0, 0, 0, .5)">
 
 
