--- a/caro.html
+++ b/caro.html
@@ -109,7 +109,7 @@
       background:rgb(0,0,0);
       background-image: url('earth3.jpg');
       background-repeat: no-repeat;
-      background-attachment: fixed;  
+/*      background-attachment: fixed; */ 
       background-size: contain;
       background-position: right;
     }
@@ -209,13 +209,13 @@
   </nav>
 </header>
 -->
-        <header class="bg-primary bg-dark text-white" style="box-shadow: inset 0 0 5rem rgba(0, 0, 0, .5); padding-top: 5rem !important">
+        <header class="bg-primary bg-dark text-white" style="box-shadow: inset 0 0 5rem rgba(0, 0, 0, .5); padding-top: 5rem !important; padding-bottom: 5rem">
             <div class="container px-4 text-center">
                  <div class="page8" style="height: 20rem">
                  <!-- <a class="btn btn-lg btn-light" href="#about">Start scrolling!</a> -->
                  </div>
 		 <br>
-		 <p class="lead">You're here to help a couple of guys get to outer space.</p>
+		 <p class="lead" style="margin-bottom:0rem">You're here to help a couple of guys get to outer space.</p>
 	    </div>    
         </header>
 <!--	  
