--- a/caro.html
+++ b/caro.html
@@ -314,11 +314,12 @@
   </div><!-- /.container -->
 
 
-  <!-- FOOTER -->
+  <!-- FOOTER 
   <footer class="container">
     <p class="float-end" style="margin-bottom:0rem; padding-bottom:2rem"><a href="#">Back to top</a></p>
     <p style="margin-bottom:0rem; padding-bottom:2rem">&copy; 2017–2023 Company, Inc. &middot; <a href="#">Privacy</a> &middot; <a href="#">Terms</a></p>
-  </footer>
+  </footer> -->
+	  
 </main>
 
 
