--- a/caro.html
+++ b/caro.html
@@ -288,7 +288,7 @@
     <hr class="featurette-divider">
 
     <div class="row featurette">
-      <div class="col-md-7 order-md-2">
+      <div class="col-md-7 order-md-2" style="text-align: right">
         <h2 class="featurette-heading fw-normal lh-1">Shirts <span class="text-body-secondary">$25</span></h2>
         <p class="lead">Black / White</p>
       </div>
