--- a/caro.html
+++ b/caro.html
@@ -290,7 +290,7 @@
     <div class="row featurette">
       <div class="col-md-7 order-md-2" style="text-align: right">
         <h2 class="featurette-heading fw-normal lh-1">Shirts <span class="text-body-secondary">$25</span></h2>
-        <p class="lead">Black / White</p>
+        <p class="lead">Black / White ~ All Sizes Available</p>
       </div>
       <div class="col-md-5 order-md-1 page3">
       </div>
@@ -307,7 +307,7 @@
        </div>
     </div>
 
-    <hr class="featurette-divider">
+   <!-- <hr class="featurette-divider"> -->
 
     <!-- /END THE FEATURETTES -->
 
