--- a/caro.html
+++ b/caro.html
@@ -249,22 +249,22 @@
     <!-- Three columns of text below the carousel -->
 	
     <div class="row">
-	  <h2 style="text-align:center; margin-top: 3rem; margin-bottom: 4rem">The Astronauts</h2>
+	  <h2 style="text-align:center; margin-top: 3rem; margin-bottom: 4rem; color:white">The Astronauts</h2>
       <div class="col-lg-4" style="margin-bottom: 3.5rem">
-        <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="var(--bs-secondary-color)"/></svg>
-        <h2 class="fw-normal" style="margin-top: 1rem">The Man</h2>
+        <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="black"/></svg>
+        <h2 class="fw-normal" style="margin-top: 1rem; color:white">The Man</h2>
         <!-- <p>Some representative placeholder content for the three columns of text below the carousel. This is the first column.</p> 
         <p><a class="btn btn-secondary" href="#">View details &raquo;</a></p> -->
       </div><!-- /.col-lg-4 -->
       <div class="col-lg-4" style="margin-bottom: 3.5rem">
         <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="var(--bs-secondary-color)"/></svg>
-        <h2 class="fw-normal" style="margin-top: 1rem">The Myth</h2>
+        <h2 class="fw-normal" style="margin-top: 1rem; color:white">The Myth</h2>
         <!-- <p>Another exciting bit of representative placeholder content. This time, we've moved on to the second column.</p> 
         <p><a class="btn btn-secondary" href="#">View details &raquo;</a></p> -->
       </div><!-- /.col-lg-4 -->
       <div class="col-lg-4" style="margin-bottom: 3.5rem">
         <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="var(--bs-secondary-color)"/></svg>
-        <h2 class="fw-normal" style="margin-top: 1rem">The Legend</h2>
+        <h2 class="fw-normal" style="margin-top: 1rem; color:white">The Legend</h2>
         <!-- <p>And lastly this, the third column of representative placeholder content.</p> 
         <p><a class="btn btn-secondary" href="#">View details &raquo;</a></p> -->
       </div><!-- /.col-lg-4 -->
