--- a/caro.html
+++ b/caro.html
@@ -277,7 +277,7 @@
 
     <div class="row featurette">
       <div class="col-md-7">
-        <h2 class="featurette-heading fw-normal lh-1">Stickers <span class="text-body-secondary">$5</span></h2>
+        <h2 class="featurette-heading fw-normal lh-1">Stickers <span class="text-body-secondary" style="color:#0d6efd">$5</span></h2>
         <p class="lead">3"x 3" ~ Custom Sizes Also Available</p>
       </div>
       <div class="col-md-5 page1">
@@ -289,7 +289,7 @@
 
     <div class="row featurette">
       <div class="col-md-7 order-md-2" style="text-align: right">
-        <h2 class="featurette-heading fw-normal lh-1">Shirts <span class="text-body-secondary">$25</span></h2>
+        <h2 class="featurette-heading fw-normal lh-1">Shirts <span class="text-body-secondary" style="color:#0d6efd">$25</span></h2>
         <p class="lead">Black / White ~ All Sizes Available</p>
       </div>
       <div class="col-md-5 order-md-1 page3">
@@ -298,9 +298,9 @@
 
     <hr class="featurette-divider">
 
-    <div class="row featurette">
+    <div class="row featurette" style="padding-bottom: 2rem">
       <div class="col-md-7">
-        <h2 class="featurette-heading fw-normal lh-1">Magnets <span class="text-body-secondary">$10</span></h2>
+        <h2 class="featurette-heading fw-normal lh-1">Magnets <span class="text-body-secondary" style="color:#0d6efd">$10</span></h2>
         <p class="lead">3"x 3" ~ Custom Sizes Also Available</p>
       </div>
       <div class="col-md-5 page1">
