--- a/caro.html
+++ b/caro.html
@@ -288,7 +288,7 @@
 </section>
     <hr class="featurette-divider">
 
-    <div class="row featurette">
+    <div class="reveal row featurette">
       <div class="col-md-7">
         <h2 class="featurette-heading fw-normal lh-1">Stickers <span class="text-body-secondary" style="color:#0d6efd">$5</span></h2>
         <p class="lead">3"x 3" ~ Custom Sizes Also Available</p>
@@ -300,7 +300,7 @@
 
     <hr class="featurette-divider">
 
-    <div class="row featurette">
+    <div class="reveal row featurette">
       <div class="col-md-7 order-md-2" style="text-align: right">
         <h2 class="featurette-heading fw-normal lh-1">Shirts <span class="text-body-secondary" style="color:#0d6efd">$25</span></h2>
         <p class="lead">Black / White ~ All Sizes Available</p>
@@ -311,7 +311,7 @@
 
     <hr class="featurette-divider">
 
-    <div class="row featurette" style="padding-bottom: 2rem">
+    <div class="reveal row featurette" style="padding-bottom: 2rem">
       <div class="col-md-7">
         <h2 class="featurette-heading fw-normal lh-1">Magnets <span class="text-body-secondary" style="color:#0d6efd">$10</span></h2>
         <p class="lead">3"x 3" ~ Custom Sizes Also Available</p>
