--- a/caro.html
+++ b/caro.html
@@ -311,7 +311,7 @@
 
     <hr class="featurette-divider">
 
-    <div class="reveal row featurette" style="padding-bottom: 2rem">
+    <div class="reveal row featurette">
       <div class="col-md-7">
         <h2 class="featurette-heading fw-normal lh-1">Magnets <span class="text-body-secondary" style="color:#0d6efd">$10</span></h2>
         <p class="lead">3"x 3" ~ Custom Sizes Also Available</p>
@@ -320,7 +320,7 @@
        </div>
     </div>
 
-   <!-- <hr class="featurette-divider"> -->
+   <hr class="featurette-divider" style="margin-bottom:0">
 
     <!-- /END THE FEATURETTES -->
 
