--- a/index.html
+++ b/index.html
@@ -74,8 +74,8 @@
                  <div class="page1" style="height: 20rem">
                  <!-- <a class="btn btn-lg btn-light" href="#about">Start scrolling!</a> -->
                  </div>
-		 <br>
-		 <p class="lead">You're here to help a couple of guys get to outer space.</p>
+		<!-- <br>
+		 <p class="lead">You're here to help a couple of guys get to outer space.</p> -->
 	    </div>    
         </header>
 			
