--- a/caro.html
+++ b/caro.html
@@ -217,8 +217,8 @@
                  <div class="page8" style="height: 20rem">
                  <!-- #000314 <a class="btn btn-lg btn-light" href="#about">Start scrolling!</a> -->
                  </div>
-		 <br>
-		 <p class="lead" style="margin-bottom:0rem">You're here to help a couple of guys get to outer space.</p>
+	<!--	 <br>
+		 <p class="lead" style="margin-bottom:0rem">You're here to help a couple of guys get to outer space.</p> -->
 	    </div>    
         </header>
              
