--- a/caro.html
+++ b/caro.html
@@ -317,7 +317,7 @@
 	  
 	
 		<!-- Astronaut section-->
-        <section id="astro" style="background-color:black; color:white; box-shadow: inset 0 0 5rem rgba(0, 0, 0, .5); padding-top: 3rem !important; padding-bottom: 7rem">
+        <section id="astro" style="background-color:black; color:white; box-shadow: inset 0 0 5rem rgba(0, 0, 0, .5); padding-top: 3rem !important">
             <div class="container px-4">
                 <div class="row">
                     <div class="reveal">
