--- a/caro.html
+++ b/caro.html
@@ -525,6 +525,18 @@
 	
  <a class="scroll-to-top rounded" href="#page-top"><i class="fas fa-angle-up"></i></a>
 
+	
+		<!-- Bootstrap core JavaScript-->
+    <script src="vendor/jquery/jquery.min.js"></script>
+
+
+   
+
+    <!-- Custom scripts for all pages-->
+    <script src="js/sb-admin-2.min.js"></script>	
+	
+	
+	
     <script src="bootstrap.bundle.min.js"></script>
 
 	<script>
