--- a/caro.html
+++ b/caro.html
@@ -286,7 +286,7 @@ to {
 	-->
 
 <!-- Phase1 Modal -->
-<div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+<div class="modal fade" id="P1M" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
   <div class="modal-dialog modal-dialog-centered">
     <div class="modal-content" style="background-color:#FFF8E7">
       <div class="modal-header">
@@ -304,12 +304,52 @@ to {
   </div>
 </div>	  
 
+<!-- Phase2 Modal -->
+<div class="modal fade" id="P2M" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered">
+    <div class="modal-content" style="background-color:#FFF8E7">
+      <div class="modal-header">
+        <h1 class="modal-title fs-5" id="staticBackdropLabel" style="color:black">Help Us Get To Outer Space</h1>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body" style="color:black">
+        With our diverse line of products and investments, every dollar we make gets us one step closer to that giant leap.
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-primary">Understood</button>
+      </div>
+    </div>
+  </div>
+</div>		
+	  
+	  
+<!-- Phase3 Modal -->
+<div class="modal fade" id="P3M" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered">
+    <div class="modal-content" style="background-color:#FFF8E7">
+      <div class="modal-header">
+        <h1 class="modal-title fs-5" id="staticBackdropLabel" style="color:black">Help Us Get To Outer Space</h1>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body" style="color:black">
+        With our diverse line of products and investments, every dollar we make gets us one step closer to that giant leap.
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-primary">Understood</button>
+      </div>
+    </div>
+  </div>
+</div>	  
+	  
+
     <div class="container px-4 py-5" id="custom-cards" style="background-color:black">
         <h2 class="reveal pb-2 border-bottom" style="color:white">The Mission</h2>
 
         <div class="row row-cols-1 row-cols-lg-3 align-items-stretch g-4 py-5">
             <div class="reveal col">
-                <div type="button" data-bs-toggle="modal" data-bs-target="#staticBackdrop" class="card card-cover h-100 overflow-hidden text-bg-dark rounded-4 shadow-lg" style="background-image: url('space5.png');">
+                <div type="button" data-bs-toggle="modal" data-bs-target="#P1M" class="card card-cover h-100 overflow-hidden text-bg-dark rounded-4 shadow-lg" style="background-image: url('space5.png');">
                     <div class="d-flex flex-column h-100 p-5 pb-3 text-white text-shadow-1">
                         <h3 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold">Phase 1</h3>
                     </div>
@@ -317,7 +357,7 @@ to {
             </div>
             
             <div class="reveal1 col">
-                <div class="card card-cover h-100 overflow-hidden text-bg-dark rounded-4 shadow-lg" style="background-image: url('space7.png');">
+                <div type="button" data-bs-toggle="modal" data-bs-target="#P2M" class="card card-cover h-100 overflow-hidden text-bg-dark rounded-4 shadow-lg" style="background-image: url('space7.png');">
           <div class="d-flex flex-column h-100 p-5 pb-3 text-white text-shadow-1">
             <h3 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold">Phase 2</h3><div style="height:10rem"></div>
           </div>
@@ -325,7 +365,7 @@ to {
       </div>
 
       <div class="reveal2 col">
-        <div class="card card-cover h-100 overflow-hidden text-bg-dark rounded-4 shadow-lg" style="background-image: url('space8.png');">
+        <div type="button" data-bs-toggle="modal" data-bs-target="#P3M" class="card card-cover h-100 overflow-hidden text-bg-dark rounded-4 shadow-lg" style="background-image: url('space8.png');">
           <div class="d-flex flex-column h-100 p-5 pb-3 text-shadow-1" style="border-color: white; border-block-width: 0.1px; border-style: solid">
             <h3 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold">Phase 3</h3>
           </div>
