--- a/caro.html
+++ b/caro.html
@@ -397,7 +397,7 @@ to {
                                 <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="black"></rect></svg>
 			    </div>
 			</div>
-						<h2 class="fw-normal">The Man</h2>
+			<h2 class="fw-normal">The Man</h2>
                         <p>Some representative placeholder content for the first column.</p>
                         <!-- <p><a class="btn btn-secondary" href="#">View details &raquo;</a></p> -->
                     </div>
@@ -433,10 +433,16 @@ to {
                 </div>
             </div>
 		
+	    <div class="container px-4">
+                <div class="row">
+                    <div class="reveal">
+			<h2 class="pb-2 border-bottom" style="color:white">The Rewards</h2>
+                    </div>
+                </div>
+            </div>
 		
 		
-		
-	    </section>	
+	</section>	
 	
 	
 	
