--- a/caro.html
+++ b/caro.html
@@ -801,7 +801,7 @@ to {
 	
 	
 	
-    <script src="bootstrap.bundle.min.js"></script>
+ <!--   <script src="bootstrap.bundle.min.js"></script> -->
 
 	<script>
 	function reveal() {
