--- a/caro.html
+++ b/caro.html
@@ -390,12 +390,6 @@ to {
 			<br>
 			<br>
 		
-
-
-		
-		
-		
-		
 	    <div class="container px-4 text-center" style="padding-top:2rem">
                 <div class="row">
                     <div class="reveal col-lg-4" style="padding-bottom: 2rem" type="button" data-bs-toggle="collapse" data-bs-target="#theman" aria-expanded="false" aria-controls="theman">
@@ -446,7 +440,7 @@ to {
 					    </div>
                         <h2 class="fw-normal">The Legend</h2>
                         <p>And lastly this, the third column of representative placeholder content.</p>
-			    			    <div class="collapse" id="themyth">
+			    			    <div class="collapse" id="thelegend">
   <div class="card card-body">
     Some placeholder content for the collapse component. This panel is hidden by default but revealed when the user activates the relevant trigger.
   </div>
