--- a/caro.html
+++ b/caro.html
@@ -775,6 +775,42 @@ to {
 			</svg>
 	</a> 	
 	
+	
+	
+<div type="button" data-bs-toggle="modal" data-bs-target="#crocol">
+    <img style="position: fixed; top: 0; right: 0; border: 0;" src="forkme_right_darkblue_121622.png" alt="Donate with Crypto">
+  </div>
+
+<!--<div class="collapse" id="collapseExample">
+  <div class="card card-body">
+    Some placeholder content for the collapse component. This panel is hidden by default but revealed when the user activates the relevant trigger.
+  </div>
+</div>
+  <a data-bs-toggle="collapse" href="#crywal" role="button" aria-expanded="false" aria-controls="crywal"><img style="position: fixed; top: 0; right: 0; border: 0;" src="forkme_right_darkblue_121622.png" alt="Donate with Crypto"></a> 
+ <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
+  <img style="position: fixed; top: 0; right: 0; border: 0;" src="forkme_right_darkblue_121622.png" alt="Donate with Crypto">
+</button> -->
+
+
+<!-- Crypto Modal -->
+<div class="modal fade" id="crocol" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="crocolLabel" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h1 class="modal-title fs-5" id="crocolLabel" style="color:black">You're the BEST!</h1>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body" style="color:black">
+        How do you want to donate?
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Bitcoin</button>
+        <button type="button" class="btn btn-primary">Ethereum</button>
+		<button type="button" class="btn btn-primary">Other</button>
+      </div>
+    </div>
+  </div>
+</div>	
 
 	
 	
