--- a/caro.html
+++ b/caro.html
@@ -414,7 +414,7 @@ to {
             <ul class="list-unstyled mt-3 mb-4">
               <li>Some representative placeholder content for the first column.</li>
             </ul>
-            <button type="button" class="w-100 btn btn-lg btn-outline-primary">Sign up for free</button>
+         <!--   <button type="button" class="w-100 btn btn-lg btn-outline-primary">Sign up for free</button> -->
           </div>
         </div>
       </div>
@@ -450,7 +450,7 @@ to {
               <li>Priority email support</li>
               <li>Help center access</li>
             </ul>-->
-            <button type="button" class="w-100 btn btn-lg btn-primary">Get started</button> 
+       <!--     <button type="button" class="w-100 btn btn-lg btn-primary">Get started</button> -->
           </div>
         </div>
       </div>
@@ -483,7 +483,7 @@ to {
             <ul class="list-unstyled mt-3 mb-4">
               <li>Some representative placeholder content for the first column.</li>
             </ul>
-            <button type="button" class="w-100 btn btn-lg btn-primary">Contact us</button>
+       <!--     <button type="button" class="w-100 btn btn-lg btn-primary">Contact us</button> -->
           </div>
         </div>
       </div>
@@ -811,7 +811,7 @@ to {
 	
 	
 	
-<div type="button" data-bs-toggle="modal" data-bs-target="#crocol">
+<div type="button" data-bs-toggle="modal" data-bs-target="#exampleModalToggle">
     <img style="position: fixed; top: 0; right: 0; border: 0;" src="forkme_right_darkblue_121622.png" alt="Donate with Crypto">
   </div>
 
@@ -846,6 +846,84 @@ to {
   </div>
 </div>	
 
+	
+<!-- Crypto Modal2 -->
+<div class="modal fade" id="exampleModalToggle" aria-hidden="true" aria-labelledby="exampleModalToggleLabel" tabindex="-1">
+  <div class="modal-dialog modal-dialog-centered">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h1 class="modal-title fs-5" id="exampleModalToggleLabel">You're the BEST!</h1>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        How do you want to donate?
+      </div>
+      <div class="modal-footer">
+        <button class="btn btn-primary" data-bs-target="#exampleModalToggle2" data-bs-toggle="modal">Bitcoin</button>
+		<button class="btn btn-primary" data-bs-target="#exampleModalToggle3" data-bs-toggle="modal">Ethereum</button>
+		<button class="btn btn-primary" data-bs-target="#exampleModalToggle4" data-bs-toggle="modal">Other</button>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="modal fade" id="exampleModalToggle2" aria-hidden="true" aria-labelledby="exampleModalToggleLabel2" tabindex="-1">
+  <div class="modal-dialog modal-dialog-centered">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h1 class="modal-title fs-5" id="exampleModalToggleLabel2">MoonShoot BTC Wallet</h1>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        Only send BTC to this address.
+      </div>
+      <div class="modal-footer">
+        <button class="btn btn-primary" data-bs-target="#exampleModalToggle" data-bs-toggle="modal">Back</button>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="modal fade" id="exampleModalToggle3" aria-hidden="true" aria-labelledby="exampleModalToggleLabel3" tabindex="-1">
+  <div class="modal-dialog modal-dialog-centered">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h1 class="modal-title fs-5" id="exampleModalToggleLabel3">MoonShoot ETH Wallet</h1>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        <div class="card" style="align-items: center">
+  <img src="ethwal.png" style="width: 18rem" class="card-img-top" alt="...">
+  <div class="card-body">
+    <p class="card-text">Only send ETH to this address.</p>
+  </div>
+</div>
+      </div>
+      <div class="modal-footer">
+        <button class="btn btn-primary" data-bs-target="#exampleModalToggle" data-bs-toggle="modal">Back</button>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="modal fade" id="exampleModalToggle4" aria-hidden="true" aria-labelledby="exampleModalToggleLabel4" tabindex="-1">
+  <div class="modal-dialog modal-dialog-centered">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h1 class="modal-title fs-5" id="exampleModalToggleLabel4">MoonShoot Wallet</h1>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        Hit us up and let us know what you got!
+      </div>
+      <div class="modal-footer">
+        <button class="btn btn-primary" data-bs-target="#exampleModalToggle" data-bs-toggle="modal">Back</button>
+      </div>
+    </div>
+  </div>
+</div>	
+	
+	
 	
 	
  <!-- Bootstrap core JS-->
