--- a/caro.html
+++ b/caro.html
@@ -270,7 +270,7 @@ to {
                  <!-- #000314 <a class="btn btn-lg btn-light" href="#about">Start scrolling!</a> -->
                  </div>
 		 <br>
-		 <br>
+		 
 	<!--	 <p class="lead" style="margin-bottom:0rem">You're here to help a couple of guys get to outer space.</p> -->
 	    </div>    
         </header>
@@ -396,7 +396,7 @@ to {
 		
 		
 		<div class="row row-cols-1 row-cols-md-3 mb-3 text-center">
-      <div class="col">
+      <div class="reveal col">
         <div class="card mb-4 rounded-3 shadow-sm" style="border-width:0px; background-color:black">
       <!--    <div class="card-header py-3 bg-dark">
             <h4 class="my-0 fw-normal">The Man</h4>
@@ -418,7 +418,7 @@ to {
           </div>
         </div>
       </div>
-      <div class="col">
+      <div class="reveal1 col">
         <div class="card mb-4 rounded-3 shadow-sm" style="border-width:0px; background-color:black">
         <!--  <div class="card-header py-3 bg-dark">
             <h4 class="my-0 fw-normal">Pro</h4>
@@ -454,7 +454,7 @@ to {
           </div>
         </div>
       </div>
-      <div class="col">
+      <div class="reveal2 col">
         <div class="card mb-4 rounded-3 shadow-sm border-primary" style="border-width:0px; background-color:black">
         <!--  <div class="card-header py-3 text-bg-primary border-primary">
             <h4 class="my-0 fw-normal">Enterprise</h4>
@@ -496,7 +496,7 @@ to {
 		    <div class="container px-4">
                 <div class="row">
                     <div class="reveal">
-			<h2 class="pb-2 border-bottom" style="padding-top: 8rem; color:white">The Rewards</h2>
+			<h2 class="pb-2 border-bottom" style="padding-top: 4rem; padding-bottom: 4rem; color:white">The Rewards</h2>
                     </div>
                 </div>
             </div>
