--- a/caro.html
+++ b/caro.html
@@ -454,7 +454,7 @@ to {
           </div>
         </div>
       </div>
-      <div class="reveal2 col">
+      <div class="reveal2 col" style="padding-top: 5rem">
         <div class="card mb-4 rounded-3 shadow-sm border-primary" style="border-width:0px; background-color:black">
         <!--  <div class="card-header py-3 text-bg-primary border-primary">
             <h4 class="my-0 fw-normal">Enterprise</h4>
@@ -497,7 +497,8 @@ to {
                 <div class="row">
                     <div class="reveal">
 			<h2 class="pb-2 border-bottom" style="padding-top: 4rem; padding-bottom: 4rem; color:white">The Rewards</h2>
-                    </div>
+                   <br>
+			</div>
                 </div>
             </div>
 
